--- a/site.html
+++ b/site.html
@@ -5,4 +5,27 @@
 
         <title>Site do Diegão</title>
     </head>
+    <body>
+        <header></header>
+        <div class="allpage">
+            <div class="container">
+                <div class="left">
+                    <div class="me">
+                        <div class="foto"></div>
+                        <div class="profile"></div>
+                    </div>
+                    <div class="aprendizado">
+                        <div class="jasei"></div>
+                        <div class="querosaber"></div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="img2"></div>
+                </div>
+            </div>
+            <div class="relato"></div>
+            <div class="tabela"></div>
+        </div>
+        <footer></footer>
+    </body>
 </html>
