--- a/site.html
+++ b/site.html
@@ -6,13 +6,21 @@
         <title>Site do Diegão</title>
     </head>
     <body>
-        <header></header>
+        <header>
+            <h1 id="header">Site do Diegão</h1>
+        </header>
+
+
         <div class="allpage">
             <div class="container">
                 <div class="left">
                     <div class="me">
-                        <div class="foto"></div>
-                        <div class="profile"></div>
+                        <div class="foto">
+                            <img class="fotominha" src="imagens/img1.jpg">
+                        </div>
+                        <div class="profile">
+                            <p class="sobremim">Meu nome é Diego, tenho 22 anos e moro em Joinville (a cidade da chuva). Estou começando agora com esse papinho de Dev e irei bagaçar!</p>
+                        </div>
                     </div>
                     <div class="aprendizado">
                         <div class="jasei"></div>
