div container pronta

--- a/site.html
+++ b/site.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
 
         <title>Site do Diegão</title>
+        <style>
+        </style>
     </head>
     <body>
         <header>
@@ -23,12 +25,29 @@
                         </div>
                     </div>
                     <div class="aprendizado">
-                        <div class="jasei"></div>
-                        <div class="querosaber"></div>
+                        <div class="jasei">
+                            <h3 class="titulojasei">O que eu já sei:</h3>
+                            <ul class="listajasei">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                        </div>
+                        <div class="querosaber">
+                            <h3 class="tituloquerosaber">O que eu quero saber:</h3>
+                            <ul class="listaquerosaber">
+                                <li>Javascript</li>
+                                <li>React</li>
+                                <li>SQL</li>
+                                <li>Node</li>
+                                <li>Bootstrap</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="right">
-                    <div class="img2"></div>
+                    <div class="img2">
+                        <img class="imagemdev" src="imagens/img2.jpg">
+                    </div>
                 </div>
             </div>
             <div class="relato"></div>
