parte html feita

--- a/site.html
+++ b/site.html
@@ -50,8 +50,24 @@
                     </div>
                 </div>
             </div>
-            <div class="relato"></div>
-            <div class="tabela"></div>
+            <div class="relato">
+                <h3 class="titulorelato">Relato do meu aprendizado</h3>
+                <p class="paragraforelato">Cursei programação 1 na faculdade, aprendi um pouco sobre c++. Um cliente me ensinou um pouco sobre HTML e CSS, agora estou aprendendo fortemente sobre o restante que me faltava no HTML e CSS e aprenderei todas as outras línguas depois.</p>
+            </div>
+            <div class="tabela">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Taxa de aprovação</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>100%</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         <footer></footer>
     </body>
