--- a/site.html
+++ b/site.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
 
         <title>Site do Diegão</title>
-        <style>
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
@@ -13,18 +12,18 @@
         </header>
 
 
-        <div class="allpage">
+        <main class="allpage">
             <div class="container">
-                <div class="left">
-                    <div class="me">
+                <section class="left">
+                    <article class="me">
                         <div class="foto">
                             <img class="fotominha" src="imagens/img1.jpg">
                         </div>
                         <div class="profile">
                             <p class="sobremim">Meu nome é Diego, tenho 22 anos e moro em Joinville (a cidade da chuva). Estou começando agora com esse papinho de Dev e irei bagaçar!</p>
                         </div>
-                    </div>
-                    <div class="aprendizado">
+                    </article>
+                    <article class="aprendizado">
                         <div class="jasei">
                             <h3 class="titulojasei">O que eu já sei:</h3>
                             <ul class="listajasei">
@@ -42,13 +41,13 @@
                                 <li>Bootstrap</li>
                             </ul>
                         </div>
-                    </div>
-                </div>
-                <div class="right">
+                    </article>
+                </section>
+                <aside class="right">
                     <div class="img2">
                         <img class="imagemdev" src="imagens/img2.jpg">
                     </div>
-                </div>
+                </aside>
             </div>
             <div class="relato">
                 <h3 class="titulorelato">Relato do meu aprendizado</h3>
@@ -68,7 +67,9 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <footer></footer>
+        </main>
+        <footer>
+            <h2>Feito pelo Diegão</h2>
+        </footer>
     </body>
 </html>
