--- a/site.html
+++ b/site.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1 id="header">Site do Diegão</h1>
+            <h1 class="tituloheader">Site do Diegão</h1>
         </header>
 
 
